Fixed spacing issue with resizing bar

--- a/src/components/add-cell.css
+++ b/src/components/add-cell.css
@@ -1,7 +1,7 @@
 .add-cell {
   position: relative;
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease-in 0.1s;
 }
 
 .add-cell:hover {
@@ -21,7 +21,6 @@
   border-bottom: 1px solid gray;
   width: 90%;
   z-index: -1;
-  transform: translateY(5px);
 }
 
 .add-cell .add-buttons {
@@ -30,7 +29,7 @@
 }
 
 .add-cell button {
-  margin: 25px 20px 15px 20px;
+  margin: 20px;
   display: flex;
   justify-content: center;
 }
